--- a/KalendarzKariery/KalendarzKariery/KalendarzKariery.csproj
+++ b/KalendarzKariery/KalendarzKariery/KalendarzKariery.csproj
@@ -194,6 +194,11 @@
     <Content Include="Images\kalendBackground.png" />
     <Content Include="Images\MiddlePartBg.png" />
     <Content Include="Scripts\CalendarWidget\calendarWidget.js" />
+    <Content Include="Scripts\CalendarWidget\Slider\application.js" />
+    <Content Include="Scripts\CalendarWidget\Slider\jquery.animate-enhanced.min.js" />
+    <Content Include="Scripts\CalendarWidget\Slider\jquery.easing.1.3.js" />
+    <Content Include="Scripts\CalendarWidget\Slider\jquery.superslides.js" />
+    <Content Include="Scripts\CalendarWidget\Slider\jquery.superslides.min.js" />
     <Content Include="Scripts\jquery-1.7.1.js" />
     <Content Include="Scripts\jquery-1.7.1.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
