--- a/KalendarzKariery/KalendarzKariery/KalendarzKariery.csproj
+++ b/KalendarzKariery/KalendarzKariery/KalendarzKariery.csproj
@@ -188,6 +188,8 @@
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
     <Content Include="Images\Nav\arrowLeft.png" />
     <Content Include="Images\Nav\arrowRight.png" />
+    <Content Include="Images\przycisk.png" />
+    <Content Include="Images\whiteColorBg.png" />
     <Content Include="img\ajax-loader.gif" />
     <Content Include="Images\kalendarzBg2.png" />
     <Content Include="Images\kalendarzTlo.png" />
@@ -195,6 +197,7 @@
     <Content Include="Images\kalendarzTloPrawo.png" />
     <Content Include="Images\kalendBackground.png" />
     <Content Include="Images\MiddlePartBg.png" />
+    <Content Include="Models\JSModels\CalendarViewModel.js" />
     <Content Include="Scripts\CalendarWidget\calendarWidget.js" />
     <Content Include="Scripts\CalendarWidget\Slider\application.js" />
     <Content Include="Scripts\CalendarWidget\Slider\jquery.animate-enhanced.min.js" />
@@ -228,10 +231,12 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\_AddNewEvent.cshtml" />
+    <Content Include="Views\Home\_Lobby.cshtml" />
+    <Content Include="Views\Home\_HoverEvent.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -252,9 +257,11 @@
         <WebProjectProperties>
           <UseIIS>True</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>0</DevelopmentServerPort>
+          <DevelopmentServerPort>80</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:59940/</IISUrl>
+          <IISUrl>http://localhost:1500/</IISUrl>
+          <OverrideIISAppRootUrl>True</OverrideIISAppRootUrl>
+          <IISAppRootUrl>http://localhost:1500/</IISAppRootUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
