--- a/KalendarzKariery/KalendarzKariery.Tests/KalendarzKariery.Tests.csproj
+++ b/KalendarzKariery/KalendarzKariery.Tests/KalendarzKariery.Tests.csproj
@@ -97,9 +97,16 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
+    <Content Include="Scripts\jquery-2.0.0.intellisense.js" />
+    <Content Include="Scripts\jquery-2.0.0.js" />
+    <Content Include="Scripts\jquery-2.0.0.min.js" />
+    <Content Include="Scripts\knockout-2.2.1.debug.js" />
+    <Content Include="Scripts\knockout-2.2.1.js" />
+    <Content Include="Scripts\modernizr-2.6.2.js" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Scripts\jquery-2.0.0.min.map" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\KalendarzKariery\KalendarzKariery.csproj">
