--- a/KalendarzKariery/KalendarzKariery/KalendarzKariery.csproj
+++ b/KalendarzKariery/KalendarzKariery/KalendarzKariery.csproj
@@ -69,9 +69,18 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Microsoft.AspNet.WebPages.OAuth.3.0.0\lib\net45\Microsoft.Web.WebPages.OAuth.dll</HintPath>
     </Reference>
+    <Reference Include="Postal">
+      <HintPath>..\packages\postal.0.8.2\lib\net45\Postal.dll</HintPath>
+    </Reference>
+    <Reference Include="RazorEngine">
+      <HintPath>..\packages\RazorEngine.3.2.0\lib\net40\RazorEngine.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Transactions" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -156,10 +165,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\AuthConfig.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="BO\ExtentionMethods\ModelStateHelper.cs" />
+    <Compile Include="BO\SeedMembership\InitializeMembership.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
@@ -167,6 +179,49 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
+    <Compile Include="Models\Address.cs">
+      <DependentUpon>KalendarzKarieryEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Event.cs">
+      <DependentUpon>KalendarzKarieryEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\KalendarzKarieryEntities.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>KalendarzKarieryEntities.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\KalendarzKarieryEntities.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>KalendarzKarieryEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\KalendarzKarieryEntities.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>KalendarzKarieryEntities.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Models\KalendarzKarieryRepository.cs" />
+    <Compile Include="Models\sysdiagram.cs">
+      <DependentUpon>KalendarzKarieryEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\User.cs">
+      <DependentUpon>KalendarzKarieryEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\UserInfo.cs">
+      <DependentUpon>KalendarzKarieryEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\AddressValidationModel.cs" />
+    <Compile Include="Models\UserValidationModel.cs" />
+    <Compile Include="Models\ViewModels\RegisterViewModel.cs" />
+    <Compile Include="Models\webpages_Membership.cs">
+      <DependentUpon>KalendarzKarieryEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\webpages_OAuthMembership.cs">
+      <DependentUpon>KalendarzKarieryEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\webpages_Roles.cs">
+      <DependentUpon>KalendarzKarieryEntities.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -226,61 +281,65 @@
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <EntityDeploy Include="Models\KalendarzKarieryEntities.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>KalendarzKarieryEntities.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Images\kalendarzLogo.png" />
+    <Content Include="Images\list-icon.png" />
+    <Content Include="Images\Nav\arrow-left.png" />
+    <Content Include="Images\Nav\arrow-right.png" />
+    <Content Include="Images\Nav\triangle-left.png" />
+    <Content Include="Images\Nav\triangle-right.png" />
+    <Content Include="Images\tapeta.jpg" />
+    <Content Include="Models\KalendarzKarieryEntities.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>KalendarzKarieryEntities.edmx</DependentUpon>
+      <LastGenOutput>KalendarzKarieryEntities.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Models\KalendarzKarieryEntities.edmx.diagram">
+      <DependentUpon>KalendarzKarieryEntities.edmx</DependentUpon>
+    </Content>
+    <Content Include="Models\KalendarzKarieryEntities.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>KalendarzKarieryEntities.edmx</DependentUpon>
+      <LastGenOutput>KalendarzKarieryEntities.cs</LastGenOutput>
+    </Content>
     <None Include="Properties\PublishProfiles\Alan.pubxml" />
-    <None Include="Scripts\jquery-1.7.1.intellisense.js" />
-    <Content Include="Images\EventBg.png" />
-    <Content Include="Images\grayLab2.png" />
-    <Content Include="Images\kalendarzGray.png" />
-    <Content Include="Images\kalendarzGray2.png" />
-    <Content Include="Images\kalendarzGray3.png" />
-    <Content Include="Images\kalendarzTlo2-transparent.png" />
-    <Content Include="Images\kalendarzTlo2.png" />
-    <Content Include="Images\kalendarzTlo3.png" />
-    <Content Include="Images\kalendarzTlo4.png" />
-    <Content Include="Images\kalendarzTloPrawo2.png" />
-    <Content Include="Images\kalendarzTloPrawo3.png" />
-    <Content Include="Images\kalendarzTloPrawo4.png" />
-    <Content Include="Images\maleLogoKalendarz.png" />
-    <Content Include="Images\Nav\arrowLeft.png" />
-    <Content Include="Images\Nav\arrowLeftRed.png" />
-    <Content Include="Images\Nav\arrowRight.png" />
-    <Content Include="Images\Nav\arrowRightRed.png" />
-    <Content Include="img\ajax-loader.gif" />
-    <Content Include="Images\kalendarzBg2.png" />
+    <None Include="Scripts\Lib\jquery-1.7.1.intellisense.js" />
     <Content Include="Images\kalendarzTlo.png" />
-    <Content Include="Images\kalendarzTloLewy.png" />
-    <Content Include="Images\kalendarzTloPrawo.png" />
-    <Content Include="Images\kalendBackground.png" />
-    <Content Include="Images\MiddlePartBg.png" />
+    <Content Include="Images\maleLogoKalendarz.png" />
+    <Content Include="img\ajax-loader.gif" />
     <Content Include="img\kalendarz.png" />
     <Content Include="img\kalendarz2.png" />
     <Content Include="img\point.png" />
     <Content Include="img\point2.png" />
     <Content Include="img\point3.png" />
-    <Content Include="Images\tri.png" />
     <Content Include="Models\JSModels\CalendarViewModel.js" />
     <Content Include="Scripts\CalendarWidget\calendarWidget.js" />
     <Content Include="Scripts\CalendarWidget\Slider\application.js" />
     <Content Include="Scripts\CalendarWidget\Slider\jquery.animate-enhanced.min.js" />
     <Content Include="Scripts\CalendarWidget\Slider\jquery.easing.1.3.js" />
     <Content Include="Scripts\CalendarWidget\Slider\jquery.superslides.min.js" />
-    <Content Include="Scripts\jquery-1.7.1.js" />
-    <Content Include="Scripts\jquery-1.7.1.min.js" />
-    <None Include="Scripts\jquery.validate-vsdoc.js" />
-    <Content Include="Scripts\jquery-ui-1.8.20.custom.min.js" />
-    <Content Include="Scripts\jquery-ui-1.8.20.js" />
-    <Content Include="Scripts\jquery-ui-1.8.20.min.js" />
-    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
-    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
-    <Content Include="Scripts\jquery.validate.js" />
-    <Content Include="Scripts\jquery.validate.min.js" />
-    <Content Include="Scripts\jquery.validate.unobtrusive.js" />
-    <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
-    <Content Include="Scripts\knockout-2.2.1.debug.js" />
-    <Content Include="Scripts\knockout-2.2.1.js" />
-    <Content Include="Scripts\modernizr-2.6.2.js" />
-    <Content Include="Scripts\_references.js" />
-    <Content Include="Web.config" />
+    <Content Include="Scripts\Lib\jquery-1.7.1.js" />
+    <Content Include="Scripts\Lib\jquery-1.7.1.min.js" />
+    <None Include="Scripts\Lib\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\Lib\jquery-ui-1.8.20.custom.min.js" />
+    <Content Include="Scripts\Lib\jquery-ui-1.8.20.js" />
+    <Content Include="Scripts\Lib\jquery-ui-1.8.20.min.js" />
+    <Content Include="Scripts\Lib\jquery.unobtrusive-ajax.js" />
+    <Content Include="Scripts\Lib\jquery.unobtrusive-ajax.min.js" />
+    <Content Include="Scripts\Lib\jquery.validate.js" />
+    <Content Include="Scripts\Lib\jquery.validate.min.js" />
+    <Content Include="Scripts\Lib\jquery.validate.unobtrusive.js" />
+    <Content Include="Scripts\Lib\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\Lib\knockout-2.2.1.debug.js" />
+    <Content Include="Scripts\Lib\knockout-2.2.1.js" />
+    <Content Include="Scripts\Lib\modernizr-2.6.2.js" />
+    <Content Include="Scripts\Lib\_references.js" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -291,11 +350,11 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Home\_AddNewEvent.cshtml" />
-    <Content Include="Views\Home\_Lobby.cshtml" />
-    <Content Include="Views\Home\_HoverEvent.cshtml" />
-    <Content Include="Views\Account\Login.cshtml" />
+    <Content Include="Views\Shared\Index.cshtml" />
+    <Content Include="Views\Shared\LobbyPage\_AddNewEvent.cshtml" />
+    <Content Include="Views\Shared\LobbyPage\_Lobby.cshtml" />
+    <Content Include="Views\Shared\LobbyPage\_HoverEvent.cshtml" />
+    <Content Include="Views\Shared\LobbyPage\_Login.cshtml" />
     <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
     <Content Include="Views\Account\_ChangePasswordPartial.cshtml" />
     <Content Include="Views\Account\_RemoveExternalLoginsPartial.cshtml" />
@@ -303,13 +362,20 @@
     <Content Include="Views\Account\ExternalLoginConfirmation.cshtml" />
     <Content Include="Views\Account\ExternalLoginFailure.cshtml" />
     <Content Include="Views\Account\Manage.cshtml" />
-    <Content Include="Views\Account\Register.cshtml" />
+    <Content Include="Views\Shared\LobbyPage\_Register.cshtml" />
+    <Content Include="Views\Shared\LobbyPage\_LobbyProfileMenu.cshtml" />
+    <Content Include="Views\Emails\_ViewStart.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Shared\CalendarPage\" />
+    <Folder Include="Views\Shared\DetailsPage\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
