--- a/KalendarzKariery/KalendarzKariery/KalendarzKariery.csproj
+++ b/KalendarzKariery/KalendarzKariery/KalendarzKariery.csproj
@@ -185,6 +185,7 @@
     <Compile Include="Models\Event.cs">
       <DependentUpon>KalendarzKarieryEntities.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\EventValidationModel.cs" />
     <Compile Include="Models\KalendarzKarieryEntities.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -212,6 +213,7 @@
     </Compile>
     <Compile Include="Models\AddressValidationModel.cs" />
     <Compile Include="Models\UserValidationModel.cs" />
+    <Compile Include="Models\ViewModels\AddEventViewModel.cs" />
     <Compile Include="Models\ViewModels\RegisterViewModel.cs" />
     <Compile Include="Models\webpages_Membership.cs">
       <DependentUpon>KalendarzKarieryEntities.tt</DependentUpon>
@@ -286,6 +288,7 @@
       <LastGenOutput>KalendarzKarieryEntities.Designer.cs</LastGenOutput>
     </EntityDeploy>
     <Content Include="Images\kalendarzLogo.png" />
+    <Content Include="Images\kalendarzTloClear.png" />
     <Content Include="Images\list-icon.png" />
     <Content Include="Images\Nav\arrow-left.png" />
     <Content Include="Images\Nav\arrow-right.png" />
@@ -309,12 +312,8 @@
     <None Include="Scripts\Lib\jquery-1.7.1.intellisense.js" />
     <Content Include="Images\kalendarzTlo.png" />
     <Content Include="Images\maleLogoKalendarz.png" />
-    <Content Include="img\ajax-loader.gif" />
-    <Content Include="img\kalendarz.png" />
-    <Content Include="img\kalendarz2.png" />
-    <Content Include="img\point.png" />
-    <Content Include="img\point2.png" />
-    <Content Include="img\point3.png" />
+    <Content Include="Images\Loader\ajax-loader.gif" />
+    <Content Include="Images\point.png" />
     <Content Include="Models\JSModels\CalendarViewModel.js" />
     <Content Include="Scripts\CalendarWidget\calendarWidget.js" />
     <Content Include="Scripts\CalendarWidget\Slider\application.js" />
