--- a/KalendarzKariery/KalendarzKariery/Web.config
+++ b/KalendarzKariery/KalendarzKariery/Web.config
@@ -16,9 +16,10 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-		<add name="KalendarzKarieryConnection" providerName="System.Data.SqlClient" connectionString="Data Source=localhost;Initial Catalog=KalendarzKarieryDB;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" />
+    <add name="KalendarzKarieryConnection" providerName="System.Data.SqlClient" connectionString="Data Source=localhost;Initial Catalog=KalendarzKarieryDB;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" />
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=localhost;Initial Catalog=KalendarzKarieryDB;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" />
-		<add name="KalendarzKarieryDBEntities" connectionString="metadata=res://*/Models.KalendarzKarieryEntities.csdl|res://*/Models.KalendarzKarieryEntities.ssdl|res://*/Models.KalendarzKarieryEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=KalendarzKarieryDB;integrated security=True;connect timeout=15;encrypt=False;trustservercertificate=False;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="KalendarzKarieryDBEntities" connectionString="metadata=res://*/Models.KalendarzKarieryEntities.csdl|res://*/Models.KalendarzKarieryEntities.ssdl|res://*/Models.KalendarzKarieryEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=KalendarzKarieryDB;integrated security=True;connect timeout=15;encrypt=False;trustservercertificate=False;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -28,7 +29,11 @@
   </appSettings>
   <system.web>
     <httpRuntime targetFramework="4.5" />
-    <compilation debug="true" targetFramework="4.5"><assemblies><add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" /></assemblies></compilation>
+    <compilation debug="true" targetFramework="4.5">
+      <assemblies>
+        <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+      </assemblies>
+    </compilation>
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
     </authentication>
@@ -48,29 +53,29 @@
         <add name="DefaultProfileProvider" type="System.Web.Providers.DefaultProfileProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
       </providers>
     </profile>
-		<membership defaultProvider="SimpleMembershipProvider">
-			<providers>
-				<clear />
-				<add name="SimpleMembershipProvider" type="WebMatrix.WebData.SimpleMembershipProvider, WebMatrix.WebData" />
-			</providers>
-		</membership>
-		<roleManager enabled="true" defaultProvider="SimpleRoleProvider">
-			<providers>
-				<clear />
-				<add name="SimpleRoleProvider" type="WebMatrix.WebData.SimpleRoleProvider, WebMatrix.WebData" />
-			</providers>
-		</roleManager>
+    <membership defaultProvider="SimpleMembershipProvider">
+      <providers>
+        <clear />
+        <add name="SimpleMembershipProvider" type="WebMatrix.WebData.SimpleMembershipProvider, WebMatrix.WebData" />
+      </providers>
+    </membership>
+    <roleManager enabled="true" defaultProvider="SimpleRoleProvider">
+      <providers>
+        <clear />
+        <add name="SimpleRoleProvider" type="WebMatrix.WebData.SimpleRoleProvider, WebMatrix.WebData" />
+      </providers>
+    </roleManager>
     <!--
             If you are deploying to a cloud environment that has multiple web server instances,
             you should change session state mode from "InProc" to "Custom". In addition,
             change the connection string named "DefaultConnection" to connect to an instance
             of SQL Server (including SQL Azure and SQL  Compact) instead of to SQL Server Express.
       -->
-		<sessionState mode="InProc" customProvider="DefaultSessionProvider">
-			<providers>
-				<add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" />
-			</providers>
-		</sessionState>
+    <sessionState mode="InProc" customProvider="DefaultSessionProvider">
+      <providers>
+        <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" />
+      </providers>
+    </sessionState>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
