--- a/KalendarzKariery/KalendarzKariery/Web.config
+++ b/KalendarzKariery/KalendarzKariery/Web.config
@@ -16,10 +16,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="KalendarzKarieryConnection" providerName="System.Data.SqlClient" connectionString="Data Source=localhost;Initial Catalog=KalendarzKarieryDB;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" />
+    <add name="KalendarzKarieryConnection" providerName="System.Data.SqlClient" connectionString="data source=localhost;initial catalog=KalendarzKarieryDB;integrated security=True;connect timeout=15;encrypt=False;trustservercertificate=False;MultipleActiveResultSets=True;App=EntityFramework" />
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=localhost;Initial Catalog=KalendarzKarieryDB;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" />
-    <add name="KalendarzKarieryDBEntities" connectionString="metadata=res://*/Models.KalendarzKarieryEntities.csdl|res://*/Models.KalendarzKarieryEntities.ssdl|res://*/Models.KalendarzKarieryEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=KalendarzKarieryDB;integrated security=True;connect timeout=15;encrypt=False;trustservercertificate=False;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <add name="KalendarzKarieryDBEntities" connectionString="metadata=res://*/Models.KalendarzKarieryEntities.csdl|res://*/Models.KalendarzKarieryEntities.ssdl|res://*/Models.KalendarzKarieryEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=KalendarzKarieryDB;integrated security=True;connect timeout=15;encrypt=False;trustservercertificate=False;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
