--- a/KalendarzKariery/KalendarzKariery/packages.config
+++ b/KalendarzKariery/KalendarzKariery/packages.config
@@ -11,16 +11,16 @@
   <package id="jQuery.UI.Combined" version="1.8.20.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
   <package id="knockoutjs" version="3.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Mvc" version="5.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="5.1.0-rc1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Providers.Core" version="1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Providers.LocalDB" version="1.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.1.0-rc1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="3.1.0-rc1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.Data" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.OAuth" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.WebData" version="3.0.0" targetFramework="net45" />
