--- a/KalendarzKariery/Data/App.config
+++ b/KalendarzKariery/Data/App.config
@@ -12,6 +12,7 @@
 	</entityFramework>
 	<connectionStrings>
 		<!--<add name="KalendarzKarieryConnection" connectionString="data source=ALAN-HP;initial catalog=KalendarzKarieryDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.EntityClient" />-->
-		<add name="KalendarzKarieryConnection" connectionString="metadata=res://*/KalendarzKarieryEntities.csdl|res://*/KalendarzKarieryEntities.ssdl|res://*/KalendarzKarieryEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ALAN-HP;initial catalog=KalendarzKarieryDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
-	</connectionStrings>
+		<!--<add name="KalendarzKarieryConnection" connectionString="metadata=res://*/KalendarzKarieryEntities.csdl|res://*/KalendarzKarieryEntities.ssdl|res://*/KalendarzKarieryEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ALAN-HP;initial catalog=KalendarzKarieryDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+		<add name="KalendarzKarieryConnection" connectionString="metadata=res://*/KalendarzKarieryEntities.csdl|res://*/KalendarzKarieryEntities.ssdl|res://*/KalendarzKarieryEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ALAN-HP;initial catalog=KalendarzKarieryDB;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		</connectionStrings>
 </configuration>
