--- a/KalendarzKariery/KalendarzKariery/Web.config
+++ b/KalendarzKariery/KalendarzKariery/Web.config
@@ -17,10 +17,10 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <!-- KalendarzKarieryConnection musi byc taka sama jak w KalendarzKarieryData app.config (uzywana tylko do SeedMembership) -->
     <add name="SimpleMembership_KalendarzKarieryConnection" providerName="System.Data.SqlClient" connectionString="data source=localhost;initial catalog=KalendarzKarieryDB;integrated security=True;connect timeout=15;encrypt=False;trustservercertificate=False;MultipleActiveResultSets=True;App=EntityFramework" />
-    <!--<add name="KalendarzKarieryConnection" connectionString="metadata=res://*/KalendarzKarieryEntities.csdl|res://*/KalendarzKarieryEntities.ssdl|res://*/KalendarzKarieryEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ALAN-HP;initial catalog=KalendarzKarieryDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-  </connectionStrings>
+		<!-- KalendarzKarieryConnection musi byc taka sama jak w KalendarzKarieryData app.config -->
+		<add name="KalendarzKarieryConnection" connectionString="metadata=res://*/KalendarzKarieryEntities.csdl|res://*/KalendarzKarieryEntities.ssdl|res://*/KalendarzKarieryEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ALAN-HP;initial catalog=KalendarzKarieryDB;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />  
+	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
