started validation of AddEventViewModel on the server

--- a/KalendarzKarierySolution/KalendarzKarieryCore/KalendarzKarieryCore.csproj
+++ b/KalendarzKarierySolution/KalendarzKarieryCore/KalendarzKarieryCore.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CEDF82D3-6851-4BC8-9E5E-12FD5D64DE30}</ProjectGuid>
+    <ProjectGuid>{A2D99E83-CDEF-4C1E-8E0A-BF4F697A6036}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>KalendarzKarieryCore</RootNamespace>
@@ -40,6 +40,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="BO\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
