--- a/KalendarzKarierySolution/KalendarzKarieryWebAPI/KalendarzKarieryWebAPI.csproj
+++ b/KalendarzKarierySolution/KalendarzKarieryWebAPI/KalendarzKarieryWebAPI.csproj
@@ -107,11 +107,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\EventsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ResponseModels\IResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Models\ResponseModels\DefaultResponseModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
@@ -125,7 +128,12 @@
       <DependentUpon>Web.config</DependentUpon>
     </Content>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Data\KalendarzKarieryData.csproj">
+      <Project>{556eca30-9acb-4557-abab-a1434957a871}</Project>
+      <Name>KalendarzKarieryData</Name>
+    </ProjectReference>
+  </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
