--- a/KalendarzKarierySolution/Data/KalendarzKarieryData.csproj
+++ b/KalendarzKarierySolution/Data/KalendarzKarieryData.csproj
@@ -57,7 +57,7 @@
     <Compile Include="Event.cs">
       <DependentUpon>KalendarzKarieryEntities.tt</DependentUpon>
     </Compile>
-    <Compile Include="IKalendarzRepository.cs" />
+    <Compile Include="IKalendarzKarieryRepository.cs" />
     <Compile Include="KalendarzKarieryEntities.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -78,6 +78,8 @@
     <Compile Include="Models\ValidationModels\AddressValidationModel.cs" />
     <Compile Include="Models\ValidationModels\EventValidationModel.cs" />
     <Compile Include="Models\ValidationModels\UserValidationModel.cs" />
+    <Compile Include="Models\ViewModels\AddEventViewModel.cs" />
+    <Compile Include="Models\ViewModels\RegisterViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="sp_helpdiagramdefinition_Result.cs">
       <DependentUpon>KalendarzKarieryEntities.tt</DependentUpon>
@@ -132,6 +134,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="SqlScripts\CreateDatabaseScript.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="BO\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
