--- a/KalendarzKarierySolution/KalendarzKariery/KalendarzKariery.csproj
+++ b/KalendarzKarierySolution/KalendarzKariery/KalendarzKariery.csproj
@@ -187,8 +187,6 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModels\AddEventViewModel.cs" />
-    <Compile Include="ViewModels\RegisterViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
@@ -334,13 +332,13 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Core\KalendarzKarieryCore.csproj">
-      <Project>{cedf82d3-6851-4bc8-9e5e-12fd5d64de30}</Project>
-      <Name>KalendarzKarieryCore</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Data\KalendarzKarieryData.csproj">
       <Project>{556eca30-9acb-4557-abab-a1434957a871}</Project>
       <Name>KalendarzKarieryData</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\KalendarzKarieryCore\KalendarzKarieryCore.csproj">
+      <Project>{a2d99e83-cdef-4c1e-8e0a-bf4f697a6036}</Project>
+      <Name>KalendarzKarieryCore</Name>
     </ProjectReference>
     <ProjectReference Include="..\KalendarzKarieryWebAPI\KalendarzKarieryWebAPI.csproj">
       <Project>{b2d55052-26ae-49e4-8f7e-01a260a90dd0}</Project>
