--- a/KalendarzKarierySolution/KalendarzKariery.Tests/packages.config
+++ b/KalendarzKarierySolution/KalendarzKariery.Tests/packages.config
@@ -6,6 +6,8 @@
   <package id="DotNetOpenAuth.OAuth.Core" version="4.1.4.12333" targetFramework="net45" />
   <package id="DotNetOpenAuth.OpenId.Core" version="4.1.4.12333" targetFramework="net45" />
   <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.1.4.12333" targetFramework="net45" />
+  <package id="Effort.EF6" version="1.1.0" targetFramework="net45" />
+  <package id="EntityFramework" version="6.0.0" targetFramework="net45" />
   <package id="jQuery" version="2.0.3" targetFramework="net45" />
   <package id="knockoutjs" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.0.0" targetFramework="net45" />
@@ -23,4 +25,5 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.7.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
+  <package id="NMemory" version="1.0.0" targetFramework="net45" />
 </packages>
