--- a/KalendarzKarierySolution/KalendarzKariery/packages.config
+++ b/KalendarzKarierySolution/KalendarzKariery/packages.config
@@ -7,7 +7,8 @@
   <package id="DotNetOpenAuth.OAuth.Core" version="4.1.4.12333" targetFramework="net45" />
   <package id="DotNetOpenAuth.OpenId.Core" version="4.1.4.12333" targetFramework="net45" />
   <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.1.4.12333" targetFramework="net45" />
-  <package id="EntityFramework" version="6.0.2" targetFramework="net45" />
+  <package id="Effort.EF6" version="1.1.0" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="jQuery" version="2.0.3" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.8.20.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
@@ -33,6 +34,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.7.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
+  <package id="NMemory" version="1.0.0" targetFramework="net45" />
   <package id="postal" version="0.8.2" targetFramework="net45" />
   <package id="RazorEngine" version="3.2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
