--- a/KalendarzKarierySolution/Data/KalendarzKarieryData.csproj
+++ b/KalendarzKarierySolution/Data/KalendarzKarieryData.csproj
@@ -61,31 +61,40 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Address.cs">
-      <DependentUpon>KalendarzKarieryEntities.tt</DependentUpon>
+      <DependentUpon>KalendarzKarieryDBEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Comment.cs">
-      <DependentUpon>KalendarzKarieryEntities.tt</DependentUpon>
+      <DependentUpon>KalendarzKarieryDBEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Enums\EventKindEnum.cs" />
     <Compile Include="Event.cs">
-      <DependentUpon>KalendarzKarieryEntities.tt</DependentUpon>
+      <DependentUpon>KalendarzKarieryDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EventKind.cs">
+      <DependentUpon>KalendarzKarieryDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EventStatu.cs">
+      <DependentUpon>KalendarzKarieryDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="KalendarzKarieryDBEntities.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>KalendarzKarieryDBEntities.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="KalendarzKarieryDBEntities.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>KalendarzKarieryDBEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="KalendarzKarieryDBEntities.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>KalendarzKarieryDBEntities.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="PrivacyLevel.cs">
+      <DependentUpon>KalendarzKarieryDBEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Repository\KalendarzKarieryRepository\IKalendarzKarieryRepository.cs" />
-    <Compile Include="KalendarzKarieryEntities.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>KalendarzKarieryEntities.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="KalendarzKarieryEntities.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>KalendarzKarieryEntities.tt</DependentUpon>
-    </Compile>
-    <Compile Include="KalendarzKarieryEntities.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>KalendarzKarieryEntities.edmx</DependentUpon>
-    </Compile>
     <Compile Include="Repository\KalendarzKarieryRepository\KalendarzKarieryRepository.cs" />
     <Compile Include="Models\AccountModels\AccountModels.cs" />
     <Compile Include="Models\ValidationModels\AddressValidationModel.cs" />
@@ -97,50 +106,50 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\RepositoryProvider.cs" />
     <Compile Include="sp_helpdiagramdefinition_Result.cs">
-      <DependentUpon>KalendarzKarieryEntities.tt</DependentUpon>
+      <DependentUpon>KalendarzKarieryDBEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="sp_helpdiagrams_Result.cs">
-      <DependentUpon>KalendarzKarieryEntities.tt</DependentUpon>
+      <DependentUpon>KalendarzKarieryDBEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="sysdiagram.cs">
-      <DependentUpon>KalendarzKarieryEntities.tt</DependentUpon>
+      <DependentUpon>KalendarzKarieryDBEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="User.cs">
-      <DependentUpon>KalendarzKarieryEntities.tt</DependentUpon>
+      <DependentUpon>KalendarzKarieryDBEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="UserAccountInfo.cs">
-      <DependentUpon>KalendarzKarieryEntities.tt</DependentUpon>
+      <DependentUpon>KalendarzKarieryDBEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="webpages_Membership.cs">
-      <DependentUpon>KalendarzKarieryEntities.tt</DependentUpon>
+      <DependentUpon>KalendarzKarieryDBEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="webpages_OAuthMembership.cs">
-      <DependentUpon>KalendarzKarieryEntities.tt</DependentUpon>
+      <DependentUpon>KalendarzKarieryDBEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="webpages_Roles.cs">
-      <DependentUpon>KalendarzKarieryEntities.tt</DependentUpon>
+      <DependentUpon>KalendarzKarieryDBEntities.tt</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
-    <EntityDeploy Include="KalendarzKarieryEntities.edmx">
+    <EntityDeploy Include="KalendarzKarieryDBEntities.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>KalendarzKarieryEntities.Designer.cs</LastGenOutput>
+      <LastGenOutput>KalendarzKarieryDBEntities.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="KalendarzKarieryEntities.Context.tt">
+    <None Include="KalendarzKarieryDBEntities.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>KalendarzKarieryEntities.edmx</DependentUpon>
-      <LastGenOutput>KalendarzKarieryEntities.Context.cs</LastGenOutput>
+      <DependentUpon>KalendarzKarieryDBEntities.edmx</DependentUpon>
+      <LastGenOutput>KalendarzKarieryDBEntities.Context.cs</LastGenOutput>
     </None>
-    <None Include="KalendarzKarieryEntities.edmx.diagram">
-      <DependentUpon>KalendarzKarieryEntities.edmx</DependentUpon>
+    <None Include="KalendarzKarieryDBEntities.edmx.diagram">
+      <DependentUpon>KalendarzKarieryDBEntities.edmx</DependentUpon>
     </None>
-    <None Include="KalendarzKarieryEntities.tt">
+    <None Include="KalendarzKarieryDBEntities.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>KalendarzKarieryEntities.edmx</DependentUpon>
-      <LastGenOutput>KalendarzKarieryEntities.cs</LastGenOutput>
+      <DependentUpon>KalendarzKarieryDBEntities.edmx</DependentUpon>
+      <LastGenOutput>KalendarzKarieryDBEntities.cs</LastGenOutput>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
@@ -148,6 +157,7 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="SqlScripts\ReseedTable.sql" />
     <Content Include="SqlScripts\CreateDatabaseScript.sql" />
   </ItemGroup>
   <ItemGroup>
